popular section on the way

--- a/index.html
+++ b/index.html
@@ -47,7 +47,92 @@
         </div>
       </section>
       <!-- other websites  -->
-      <section class="website-logos"></section>
+      <section class="website-logos">
+        <img src="./logos/Amazon.svg" alt="" class="logos" />
+        <img src="./logos/Alibaba.svg" alt="" class="logos" />
+        <img src="./logos/Ebay.svg" alt="" class="logos" />
+        <img src="./logos/Rakuten.svg" alt="" class="logos" />
+        <img src="./logos/Daraz.pk Logo.svg" alt="" class="logos" />
+        <img src="./logos/Target.svg" alt="" class="logos" />
+        <img src="./logos/Walmart.svg" alt="" class="logos" />
+      </section>
     </header>
+    <main>
+      <h3 class="main-title">Popular Collection</h3>
+      <div class="box-container">
+        <div class="box">
+          <img src="./images/tripod.png" alt="" class="box-img" />
+          <h3 class="main-title">Flex Tripod</h3>
+          <h2 class="price">$50.48</h2>
+          <p class="box-info">
+            Wordwide shifting available Buyers protection possible!
+          </p>
+        </div>
+        <div class="box">
+          <img src="./images/mic.png" alt="" class="box-img" />
+          <h3 class="main-title">Microphone</h3>
+          <h2 class="price">$120.99</h2>
+          <p class="box-info">
+            Wordwide shifting available Buyers protection possible!
+          </p>
+        </div>
+        <div class="box">
+          <img src="./images/airpod.png" alt="" class="box-img" />
+          <h3 class="main-title">Airbuds</h3>
+          <h2 class="price">$99.59</h2>
+          <p class="box-info">
+            Wordwide shifting available Buyers protection possible!
+          </p>
+        </div>
+        <div class="box">
+          <img src="" alt="" class="box-img" />
+          <h3 class="main-title"></h3>
+          <h2 class="price"></h2>
+          <p class="box-info">
+            Wordwide shifting available Buyers protection possible!
+          </p>
+        </div>
+        <div class="box">
+          <img src="" alt="" class="box-img" />
+          <h3 class="main-title"></h3>
+          <h2 class="price"></h2>
+          <p class="box-info">
+            Wordwide shifting available Buyers protection possible!
+          </p>
+        </div>
+        <div class="box">
+          <img src="" alt="" class="box-img" />
+          <h3 class="main-title"></h3>
+          <h2 class="price"></h2>
+          <p class="box-info">
+            Wordwide shifting available Buyers protection possible!
+          </p>
+        </div>
+        <div class="box">
+          <img src="" alt="" class="box-img" />
+          <h3 class="main-title"></h3>
+          <h2 class="price"></h2>
+          <p class="box-info">
+            Wordwide shifting available Buyers protection possible!
+          </p>
+        </div>
+        <div class="box">
+          <img src="" alt="" class="box-img" />
+          <h3 class="main-title"></h3>
+          <h2 class="price"></h2>
+          <p class="box-info">
+            Wordwide shifting available Buyers protection possible!
+          </p>
+        </div>
+        <div class="box">
+          <img src="" alt="" class="box-img" />
+          <h3 class="main-title"></h3>
+          <h2 class="price"></h2>
+          <p class="box-info">
+            Wordwide shifting available Buyers protection possible!
+          </p>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
