--- a/index.html
+++ b/index.html
@@ -58,81 +58,111 @@
       </section>
     </header>
     <main>
-      <h3 class="main-title">Popular Collection</h3>
-      <div class="box-container">
-        <div class="box">
-          <img src="./images/tripod.png" alt="" class="box-img" />
-          <h3 class="main-title">Flex Tripod</h3>
-          <h2 class="price">$50.48</h2>
-          <p class="box-info">
-            Wordwide shifting available Buyers protection possible!
-          </p>
+      <div class="products">
+        <h3 class="main-title">Popular Collection</h3>
+        <div class="box-container">
+          <div class="box">
+            <img src="./images/tripod.png" alt="" class="box-img" />
+            <h3 class="main-title">Flex Tripod</h3>
+            <h2 class="price">$50.48</h2>
+            <p class="box-info">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="box">
+            <img src="./images/mic.png" alt="" class="box-img" />
+            <h3 class="main-title">Microphone</h3>
+            <h2 class="price">$120.99</h2>
+            <p class="box-info">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="box">
+            <img src="./images/airpod.png" alt="" class="box-img" />
+            <h3 class="main-title">Airbuds</h3>
+            <h2 class="price">$99.59</h2>
+            <p class="box-info">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="box">
+            <img src="./images/drone.png" alt="" class="box-img" />
+            <h3 class="main-title">Drone</h3>
+            <h2 class="price">$899.99</h2>
+            <p class="box-info">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="box">
+            <img src="./images/lights.png" alt="" class="box-img" />
+            <h3 class="main-title">Lights</h3>
+            <h2 class="price">$69.99</h2>
+            <p class="box-info">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="box">
+            <img src="./images/setup.png" alt="" class="box-img" />
+            <h3 class="main-title">Photoshoot</h3>
+            <h2 class="price">$299.99</h2>
+            <p class="box-info">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="box">
+            <img src="./images/camera.png" alt="" class="box-img" />
+            <h3 class="main-title">Vlogging Camera</h3>
+            <h2 class="price">$1599.99</h2>
+            <p class="box-info">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="box">
+            <img src="./images/action.png" alt="" class="box-img" />
+            <h3 class="main-title">Action Camera</h3>
+            <h2 class="price">$399</h2>
+            <p class="box-info">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="box">
+            <img src="./images/single-light.png" alt="" class="box-img" />
+            <h3 class="main-title">Green Screen</h3>
+            <h2 class="price">$29.99</h2>
+            <p class="box-info">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
         </div>
-        <div class="box">
-          <img src="./images/mic.png" alt="" class="box-img" />
-          <h3 class="main-title">Microphone</h3>
-          <h2 class="price">$120.99</h2>
-          <p class="box-info">
-            Wordwide shifting available Buyers protection possible!
-          </p>
+        <button class="see-more">
+          see more <i class="fa-solid fa-arrow-right"></i>
+        </button>
+      </div>
+      <div class="feature-section">
+        <div class="feature-img">
+          <img src="./images/gear.png" alt="" class="feature-pic" />
         </div>
-        <div class="box">
-          <img src="./images/airpod.png" alt="" class="box-img" />
-          <h3 class="main-title">Airbuds</h3>
-          <h2 class="price">$99.59</h2>
-          <p class="box-info">
-            Wordwide shifting available Buyers protection possible!
+        <div class="feature-content">
+          <h3 class="feature-title">Featured products at one place</h3>
+          <p class="feature-text">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
           </p>
-        </div>
-        <div class="box">
-          <img src="" alt="" class="box-img" />
-          <h3 class="main-title"></h3>
-          <h2 class="price"></h2>
-          <p class="box-info">
-            Wordwide shifting available Buyers protection possible!
-          </p>
-        </div>
-        <div class="box">
-          <img src="" alt="" class="box-img" />
-          <h3 class="main-title"></h3>
-          <h2 class="price"></h2>
-          <p class="box-info">
-            Wordwide shifting available Buyers protection possible!
-          </p>
-        </div>
-        <div class="box">
-          <img src="" alt="" class="box-img" />
-          <h3 class="main-title"></h3>
-          <h2 class="price"></h2>
-          <p class="box-info">
-            Wordwide shifting available Buyers protection possible!
-          </p>
-        </div>
-        <div class="box">
-          <img src="" alt="" class="box-img" />
-          <h3 class="main-title"></h3>
-          <h2 class="price"></h2>
-          <p class="box-info">
-            Wordwide shifting available Buyers protection possible!
-          </p>
-        </div>
-        <div class="box">
-          <img src="" alt="" class="box-img" />
-          <h3 class="main-title"></h3>
-          <h2 class="price"></h2>
-          <p class="box-info">
-            Wordwide shifting available Buyers protection possible!
-          </p>
-        </div>
-        <div class="box">
-          <img src="" alt="" class="box-img" />
-          <h3 class="main-title"></h3>
-          <h2 class="price"></h2>
-          <p class="box-info">
-            Wordwide shifting available Buyers protection possible!
-          </p>
+          <button class="feature-btn">
+            Join Now <i class="fa-solid fa-arrow-right"></i>
+          </button>
         </div>
       </div>
     </main>
+    <footer>
+      <h1>Influencer Products</h1>
+      <p>Copyright © 2020 influencer products</p>
+      <p>All rights reserved</p>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-solid fa-basketball"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-youtube"></i>
+    </footer>
   </body>
 </html>
