--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="box-container">
           <div class="box">
             <img src="./images/tripod.png" alt="" class="box-img" />
-            <h3 class="main-title">Flex Tripod</h3>
+            <h3 class="main-title box-title">Flex Tripod</h3>
             <h2 class="price">$50.48</h2>
             <p class="box-info">
               Wordwide shifting available Buyers protection possible!
@@ -71,7 +71,7 @@
           </div>
           <div class="box">
             <img src="./images/mic.png" alt="" class="box-img" />
-            <h3 class="main-title">Microphone</h3>
+            <h3 class="main-title box-title">Microphone</h3>
             <h2 class="price">$120.99</h2>
             <p class="box-info">
               Wordwide shifting available Buyers protection possible!
@@ -79,7 +79,7 @@
           </div>
           <div class="box">
             <img src="./images/airpod.png" alt="" class="box-img" />
-            <h3 class="main-title">Airbuds</h3>
+            <h3 class="main-title box-title">Airbuds</h3>
             <h2 class="price">$99.59</h2>
             <p class="box-info">
               Wordwide shifting available Buyers protection possible!
@@ -87,7 +87,7 @@
           </div>
           <div class="box">
             <img src="./images/drone.png" alt="" class="box-img" />
-            <h3 class="main-title">Drone</h3>
+            <h3 class="main-title box-title">Drone</h3>
             <h2 class="price">$899.99</h2>
             <p class="box-info">
               Wordwide shifting available Buyers protection possible!
@@ -95,7 +95,7 @@
           </div>
           <div class="box">
             <img src="./images/lights.png" alt="" class="box-img" />
-            <h3 class="main-title">Lights</h3>
+            <h3 class="main-title box-title">Lights</h3>
             <h2 class="price">$69.99</h2>
             <p class="box-info">
               Wordwide shifting available Buyers protection possible!
@@ -103,7 +103,7 @@
           </div>
           <div class="box">
             <img src="./images/setup.png" alt="" class="box-img" />
-            <h3 class="main-title">Photoshoot</h3>
+            <h3 class="main-title box-title">Photoshoot</h3>
             <h2 class="price">$299.99</h2>
             <p class="box-info">
               Wordwide shifting available Buyers protection possible!
@@ -111,7 +111,7 @@
           </div>
           <div class="box">
             <img src="./images/camera.png" alt="" class="box-img" />
-            <h3 class="main-title">Vlogging Camera</h3>
+            <h3 class="main-title box-title">Vlogging Gear</h3>
             <h2 class="price">$1599.99</h2>
             <p class="box-info">
               Wordwide shifting available Buyers protection possible!
@@ -119,7 +119,7 @@
           </div>
           <div class="box">
             <img src="./images/action.png" alt="" class="box-img" />
-            <h3 class="main-title">Action Camera</h3>
+            <h3 class="main-title box-title">Action Camera</h3>
             <h2 class="price">$399</h2>
             <p class="box-info">
               Wordwide shifting available Buyers protection possible!
@@ -127,16 +127,16 @@
           </div>
           <div class="box">
             <img src="./images/single-light.png" alt="" class="box-img" />
-            <h3 class="main-title">Green Screen</h3>
+            <h3 class="main-title box-title">Green Screen</h3>
             <h2 class="price">$29.99</h2>
             <p class="box-info">
               Wordwide shifting available Buyers protection possible!
             </p>
           </div>
         </div>
-        <button class="see-more">
+        <!-- <button class="see-more">
           see more <i class="fa-solid fa-arrow-right"></i>
-        </button>
+        </button> -->
       </div>
       <div class="feature-section">
         <div class="feature-img">
